# SQLA-Learn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  basics.py  pyproject.toml  requirements.txt  setup.py  students.db
NeuralNine/: basics.py  main.py  school.db  students.db
ZeqTech/Create-Read-Update/: app.py  database.db
ZeqTech/Filtering-Data/: app.py  database.db  models.py
ZeqTech/Grouping-Chaining-Data/: app.py
ZeqTech/Indexes/: models.py
ZeqTech/Ordering-Data/: app.py  database.db
ZeqTech/Reduce-Column-Data/: app.py  models.py
ZeqTech/Relationship-Loading-Techniques/: app.py  models.py
ZeqTech/Types-of-JOINS/: app.py  models.py
ZeqTech/many-many/: database.db  main.py
ZeqTech/one-many/: database.db  main.py
ZeqTech/one-one/: database.db  main.py
tests/: __init__.py  test_basics.py
